--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-plugin-template",
+  "name": "vuelidate-form-group",
   "version": "0.0.0",
   "author": "Chris Mitchell (@crishellco)",
-  "description": "A Vue plugin template",
+  "description": "A Vue form group component made specifically for Vuelidate",
   "main": "dist/index.js",
   "files": [
     "dist",
@@ -13,17 +13,18 @@
     "test": "jest && jest-coverage-badges output badges",
     "lint": "eslint --ext .js,.vue src/",
     "lint:fix": "eslint --ext .js,.vue src/ --fix",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "demo": "yarn --cwd demo run serve"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/crishellco/vue-plugin-template.git"
+    "url": "git+https://github.com/crishellco/vuelidate-form-group.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/crishellco/vue-plugin-template/issues"
+    "url": "https://github.com/crishellco/vuelidate-form-group/issues"
   },
-  "homepage": "https://crishellco.github.io/vue-plugin-template/",
+  "homepage": "https://crishellco.github.io/vuelidate-form-group/",
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -38,30 +39,31 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-vue": "^2.0.2",
     "cross-env": "^5.2.0",
-    "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.0.1",
+    "eslint": "^6.7.2",
     "husky": "^3.0.2",
-    "jest": "^24.9.0",
     "jest-coverage-badges": "^1.1.2",
+    "jest": "^24.9.0",
     "poi": "^12.7.1",
     "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "vue": "^2.6.10",
     "vue-html-loader": "^1.2.4",
     "vue-jest": "^3.0.5",
     "vue-loader": "^15.7.1",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
+    "vue": "^2.6.10",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.1.1",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "webpack": "^4.39.1"
   },
   "peerDependencies": {
-    "vue": "^2.6.10"
-  },
-  "dependencies": {}
+    "vue": "^2.6.10",
+    "vuelidate": "^0.7.6"
+  }
 }
